tests/surveytypo.out

Removing trailing traverses...

Concatenating traverses...

Simplifying network...
cavern: warning: Survey not all connected to fixed stations
The following survey stations are not attached to a fixed point:
./surveytypo.svx:10: info: cave.001

Calculating network...

Calculating traverses...

Calculating trailing traverses...
./surveytypo.svx:4: warning: Unused fixed point "gps.1"

Calculating statistics...

Survey contains 4 survey stations, joined by 2 legs.
There are 0 loops.
Survey has 2 connected components.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
./surveytypo.svx:15:9: error: Reference to station "gos.1" from non-existent survey "gos"
./surveytypo.svx:15: warning: Station "gos.1" referred to just once, with an explicit survey name - typo?

There were 3 warning(s) and 1 error(s) - no output files produced.
